test_fixtures/for/var_in_body.lox
// ParserError: UnexpectedExpressionToken found Var from l2c10 to l2c13
for (;;) var foo;
